Framework updated V1.4