@@ -1,7 +1,9 @@
 package utilities.helper;
 
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
+import org.apache.commons.codec.binary.Base64;
+//import sun.misc.BASE64Decoder;
+//import sun.misc.BASE64Encoder;
+
 
 /**
  * @param
@@ -41,7 +43,10 @@ public class StringEncrypt {
             }
             mesg=null;
             keys=null;
-            return new String(new BASE64Encoder().encodeBuffer(new String(newmsg).getBytes()));
+            byte[] bytes = new byte[(int) (new String(newmsg).length())];
+
+            return new String(Base64.encodeBase64(bytes));
+//            return new String(new BASE64Encoder().encodeBuffer(new String(newmsg).getBytes()));
 
         } catch (Exception e) {
             e.printStackTrace();
@@ -62,10 +67,11 @@ public class StringEncrypt {
     public static String decryptXOR(String message, String key){
         try {
             if (message==null || key==null ) return null;
-            BASE64Decoder decoder = new BASE64Decoder();
-            char[] keys=key.toCharArray();
-            char[] mesg=new String(decoder.decodeBuffer(message)).toCharArray();
 
+//            BASE64Decoder decoder = new BASE64Decoder();
+            char[] keys=key.toCharArray();
+//            char[] mesg=new String(decoder.decodeBuffer(message)).toCharArray();
+            char[] mesg=new String(Base64.decodeBase64(message)).toCharArray();
             int ml=mesg.length;
             int kl=keys.length;
             char[] newmsg=new char[ml];
